bk_ida/gccida/c2/make_extraction
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6365:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6375:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6376:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6377:4: error: expected ';' after expression
rtx v12; // r9 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6377:5: error: use of undeclared identifier 'v12'
rtx v12; // r9 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6378:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6383:4: error: expected ';' after expression
rtx v18; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6383:5: error: use of undeclared identifier 'v18'
rtx v18; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6386:4: error: expected ';' after expression
rtx v21; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6386:5: error: use of undeclared identifier 'v21'
rtx v21; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6390:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v25; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6392:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6393:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6393:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6394:4: error: expected ';' after expression
rtx v29; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6394:5: error: use of undeclared identifier 'v29'
rtx v29; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6395:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v30; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6396:1: error: must use 'enum' tag to refer to type 'extraction_pattern'
extraction_pattern v31; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/combine.c:6398:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // edx 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_extraction/src/obj/combine.o] Error 1
